--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "react-markdown": "^7.1.0",
     "react-tabs": "^3.2.3",
     "react-trello": "^2.2.11",
-    "react-tsparticles": "^1.37.3"
+    "react-tsparticles": "^1.37.3",
+    "typed.js": "^2.0.16"
   },
   "devDependencies": {
     "@types/capitalize": "^2.0.0",
@@ -30,9 +31,12 @@
     "@types/react": "17.0.18",
     "@types/react-dom": "^17.0.10",
     "@types/react-tabs": "^2.3.3",
+    "autoprefixer": "^10.4.16",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
+    "postcss": "^8.4.31",
     "sass": "^1.43.4",
+    "tailwindcss": "^3.3.3",
     "typescript": "4.3.5"
   }
 }
