--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "nodemailer": "^6.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-headroom": "^3.2.1",
     "react-markdown": "^7.1.0",
     "react-tabs": "^3.2.3",
     "react-trello": "^2.2.11",
@@ -30,6 +31,7 @@
     "@types/nodemailer": "^6.4.4",
     "@types/react": "17.0.18",
     "@types/react-dom": "^17.0.10",
+    "@types/react-headroom": "^3.2.1",
     "@types/react-tabs": "^2.3.3",
     "autoprefixer": "^10.4.16",
     "eslint": "7.32.0",
