--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,16 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "knex": "0.21.18",
-    "next-auth": "^3.29.0",
-    "sqlite3": "5.0.0",
+    "13": "0.0.0",
+    "jquery": "^3.7.1",
+    "knex": "^3.0.1",
+    "mysql": "^2.18.1",
+    "next": "^13.5.4",
+    "next-auth": "^4.23.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "sails-mysql": "^3.0.1",
+    "sqlite3": "^5.1.6",
     "strapi": "3.6.8",
     "strapi-admin": "3.6.8",
     "strapi-connector-bookshelf": "3.6.8",
