--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/color": "^3.0.2",
     "capitalize": "^2.0.4",
     "color": "^4.0.1",
@@ -21,6 +22,8 @@
     "react-dom": "17.0.2",
     "react-headroom": "^3.2.1",
     "react-markdown": "^7.1.0",
+    "react-multi-carousel": "^2.8.4",
+    "react-redux": "^8.1.3",
     "react-tabs": "^3.2.3",
     "react-trello": "^2.2.11",
     "react-tsparticles": "^1.37.3",
