memperbaiki tampilan list aduan dan aspirasi

--- a/backend/api/berita/models/berita.settings.json
+++ b/backend/api/berita/models/berita.settings.json
@@ -37,6 +37,9 @@
     "pratinjau": {
       "type": "text",
       "required": true
+    },
+    "category": {
+      "model": "categories"
     }
   }
 }
