mengintegrasikan halaman struktur-organisasi dan tentang-kami dengan cms

--- a/backend/api/proker/models/proker.settings.json
+++ b/backend/api/proker/models/proker.settings.json
@@ -17,6 +17,10 @@
     },
     "tautan": {
       "type": "string"
+    },
+    "divisi_pengurus": {
+      "via": "prokers",
+      "model": "kategori-pengurus"
     }
   }
 }
