--- a/backend/api/pengurus/models/pengurus.settings.json
+++ b/backend/api/pengurus/models/pengurus.settings.json
@@ -20,7 +20,7 @@
       "type": "integer",
       "required": true
     },
-    "instagram": {
+    "linkedin": {
       "type": "string"
     },
     "foto": {
