--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "color": "^4.0.1",
     "date-fns": "^2.25.0",
     "googleapis": "^91.0.0",
+    "gsap": "^3.12.2",
+    "locomotive-scroll": "^4.1.4",
     "next": "11.1.0",
     "next-auth": "^3.29.0",
     "nodemailer": "^6.7.0",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@types/capitalize": "^2.0.0",
+    "@types/locomotive-scroll": "^4.1.2",
     "@types/nodemailer": "^6.4.4",
     "@types/react": "17.0.18",
     "@types/react-dom": "^17.0.10",
